# curve-project

./: .hgignore  cad_cairo_graphics.h  cad_document.cpp  cad_gtk_adaptor.h  cad_gui_view.h  cadcore.cbp  cadcore.depend  cadcore.layout  cadview.cbp  cadview.depend  cadview.layout  main.cpp  notes.txt  primitives.h  slate.cpp  slate.h
cadcore/: cad_document.h  cad_gtk_adaptor.cpp  cad_primitives.h  cadcore.depend
cadview/: cadview.cbp  cadview.depend  cadview.layout  main.cpp  notes.txt  slate.cpp
trunk/lab/App0/: App0.sln
trunk/lab/App0/App0/: App0.cpp  App0.rc  App0.vcxproj  App0.vcxproj.filters  BaseWnd.cpp  BaseWnd.h  Resource.h  app0_exception.cpp  app0_exception.h  stdafx.cpp  stdafx.h
trunk/lab/cadview/cadcore/: cad_cairo_graphics.h  cad_gui_view.h  cadcore.layout
trunk/lab/cadview/cadview/: s2.cpp  s2.h
trunk/lab/cgafaq/: CMakeLists.txt  cgafaq.h  cgafaqtest.cpp
trunk/src/curve/: LICENSE  curve.sln
trunk/src/curve/curve/: MainWnd.cpp  MainWnd.h  Resource.h  aboutDlg.cpp  aboutDlg.h  controlDlg.cpp  controlDlg.h  curve.cpp  curve.h  curve.rc  curve.vcxproj  curve.vcxproj.filters  curveWnd.cpp  curveWnd.h  errwnd.cpp  errwnd.h  stdafx.cpp  stdafx.h  winmain.cpp  winmain.h
